--- a/app/package.json
+++ b/app/package.json
@@ -8,10 +8,12 @@
   "copyright": "© 2016, OPifex Entertainment",
   "main": "background.js",
   "dependencies": {
+    "fs-extra": "^0.26.5",
     "fs-jetpack": "^0.7.0",
     "git-cli": "^0.8.3",
     "github-api": "^0.10.7",
     "mkdirp": "^0.5.1",
+    "node-xcode-opifex": "^0.8.5",
     "open": "0.0.5",
     "psd": "^3.1.0",
     "rimraf": "^2.4.3"
