--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "q": "^1.4.1",
     "rollup": "^0.21.0",
     "tree-kill": "^0.1.1",
-    "yargs": "^3.15.0"
+    "yargs": "^3.15.0",
+    "github-api": "^0.11.2"
   },
   "optionalDependencies": {
     "appdmg": "^0.3.2",
