--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "release": "gulp release --env=production",
     "start": "node ./tasks/start",
     "test": "node ./tasks/start --env=test"
+  },
+  "dependencies": {
+    "concat-files": "^0.1.0",
+    "node-minify": "^1.3.7",
+    "walk": "^2.3.9"
   }
 }
