--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "release": "gulp release --env=production",
     "start": "node ./tasks/start",
     "test": "node ./tasks/start --env=test"
+  },
+  "dependencies": {
+    "array-async": "^3.0.0",
+    "sync": "^0.2.5"
   }
 }
