--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,8 @@
     "node-xcode-opifex": "^0.8.5",
     "open": "0.0.5",
     "psd": "^3.1.0",
+    "request": "^2.72.0",
+    "request-progress": "^2.0.1",
     "rimraf": "^2.4.3"
   }
 }
