--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   },
   "dependencies": {
     "concat-files": "^0.1.0",
+    "fs-jetpack": "^0.8.0",
+    "mkdirp": "^0.5.1",
     "node-minify": "^1.3.7",
+    "node-xcode-opifex": "^0.8.5",
     "walk": "^2.3.9"
   }
 }
