--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "q": "^1.4.1",
     "rollup": "^0.21.0",
     "tree-kill": "^0.1.1",
-    "yargs": "^3.15.0",
-    "github-api": "^0.11.2"
+    "yargs": "^3.15.0"
   },
   "optionalDependencies": {
     "appdmg": "^0.3.2",
@@ -26,6 +25,7 @@
   "dependencies": {
     "concat-files": "^0.1.0",
     "fs-jetpack": "^0.8.0",
+    "github-api": "^1.1.0",
     "mkdirp": "^0.5.1",
     "node-minify": "^1.3.7",
     "node-xcode-opifex": "^0.8.5",
