--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "psd": "^3.1.0",
     "request": "^2.72.0",
     "request-progress": "^2.0.1",
-    "rimraf": "^2.4.3"
+    "rimraf": "^2.4.3",
+    "unzip": "^0.1.11"
   }
 }
