--- a/app/bower.json
+++ b/app/bower.json
@@ -21,6 +21,7 @@
     "jquery": "~2.1.4",
     "blob": "*",
     "FileSaver": "*",
-    "bootstrap-social": "~4.12.0"
+    "bootstrap-social": "~4.12.0",
+    "intro.js": "^2.1.0"
   }
 }
