--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   "main": "background.js",
   "dependencies": {
     "array-async": "^3.0.0",
+    "card": "^1.3.2",
     "forEachAsync": "^3.0.0",
     "fs-extra": "^0.26.5",
     "fs-jetpack": "^0.7.0",
@@ -21,6 +22,7 @@
     "request-progress": "^2.0.1",
     "rimraf": "^2.4.3",
     "signals": "^1.0.0",
+    "stripe": "^4.7.0",
     "unzip": "^0.1.11"
   }
 }
