--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test": "node ./tasks/start --env=test"
   },
   "dependencies": {
+    "async": "^2.1.4",
     "concat-files": "^0.1.0",
+    "electron-prebuilt": "^1.4.12",
     "fs-jetpack": "^0.8.0",
     "github-api": "^1.1.0",
     "mkdirp": "^0.5.1",
