Watcher to auto-convert fbx to dae with Autodesk Converter

--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "async": "^2.1.4",
     "concat-files": "^0.1.0",
     "electron-prebuilt": "^1.4.12",
+    "filewatcher": "^3.0.1",
     "fs-jetpack": "^0.8.0",
     "github-api": "^1.1.0",
     "mkdirp": "^0.5.1",
     "node-minify": "^1.3.7",
+    "node-watch": "^0.4.1",
     "node-xcode-opifex": "^0.8.5",
     "uglify-js": "^2.6.2",
     "walk": "^2.3.9"
