--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "array-async": "^3.0.0",
     "card": "^1.3.2",
+    "filewatcher": "^3.0.1",
     "forEachAsync": "^3.0.0",
     "fs-extra": "^0.26.5",
     "fs-jetpack": "^0.7.3",
     "git-cli": "^0.8.3",
     "mkdirp": "^0.5.1",
+    "node-watch": "^0.4.1",
     "node-xcode-opifex": "^0.8.5",
     "open": "0.0.5",
     "psd": "^3.1.0",
