--- a/app/package.json
+++ b/app/package.json
@@ -9,12 +9,14 @@
   "main": "background.js",
   "dependencies": {
     "array-async": "^3.0.0",
+    "async": "^2.1.4",
     "card": "^1.3.2",
     "filewatcher": "^3.0.1",
     "forEachAsync": "^3.0.0",
     "fs-extra": "^0.26.5",
     "fs-jetpack": "^0.7.3",
     "git-cli": "^0.8.3",
+    "github-api": "^3.0.0",
     "mkdirp": "^0.5.1",
     "node-watch": "^0.4.1",
     "node-xcode-opifex": "^0.8.5",
