--- a/app/bower.json
+++ b/app/bower.json
@@ -22,6 +22,10 @@
     "blob": "*",
     "FileSaver": "*",
     "bootstrap-social": "~4.12.0",
-    "intro.js": "^2.1.0"
+    "intro.js": "^2.1.0",
+    "angular-sanitize": "^1.6.2"
+  },
+  "resolutions": {
+    "angular": "1.6.1"
   }
 }
