--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-minify": "^1.3.7",
     "node-watch": "^0.4.1",
     "node-xcode-opifex": "^0.8.5",
+    "node-zip": "^1.1.1",
     "uglify-js": "^2.6.2",
     "walk": "^2.3.9"
   }
