--- a/app/bower.json
+++ b/app/bower.json
@@ -15,15 +15,15 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.5",
-    "angular-route": "~1.4.5",
     "bootstrap": "~3.3.5",
     "jquery": "~2.1.4",
     "blob": "*",
     "FileSaver": "*",
     "bootstrap-social": "~4.12.0",
     "intro.js": "^2.1.0",
-    "angular-sanitize": "^1.6.2"
+    "angular-sanitize": "^1.6.2",
+    "angular": "^1.6.6",
+    "angular-route": "^1.6.6"
   },
   "resolutions": {
     "angular": "1.6.2"
